--- a/code/style.css
+++ b/code/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: 'Playfair Display';
+  font-family: 'Playfair Display SC', serif;
 }
 
 a {
@@ -115,7 +115,6 @@ input[type=checkbox] {
 
 }
 
-
 /*FOOTER*/
 footer {
   background-color: #606453;
@@ -174,6 +173,7 @@ li:hover {
   overflow: auto;
 }
 
+/*top article fall beauty*/
 .grid-one {
   grid-column: span 8;
   background-color: #cdc3a4;
@@ -190,46 +190,13 @@ h1 {
   color: #f8f6ee
 }
 
-p {
+p#header {
   padding-bottom: 50px;
   font-size: 3vw;
-  font-family: 'Playfair Display';
   color: #f8f6ee;
 }
 
-p9 {
-  padding: 30px;
-  font-size: 2vw;
-  font-family: 'Playfair Display';
-  color: #cdc3a4;
-}
-
-h9 {
-  padding: 50px 0px;
-  font-size: 3vw;
-  font-family: 'Playfair Display';
-  color: #cdc3a4;
-}
-
-
-.article-two {
-  padding-top: 20px;
-  max-width: 80%;
-  max-height: 100%;
-}
-
-h2 {
-  padding-top: 40px;
-  font-size: 5vw;
-  font-family: 'Playfair Display';
-}
-
-h3 {
-  padding-top: 40px;
-  font-size: 10px;
-  font-family: 'Playfair Display';
-}
-
+/*article (sidebar grid) prioritize*/
 .sidebar {
   grid-column: 1 / 4;
 }
@@ -240,40 +207,71 @@ h3 {
   max-height: 100%;
 }
 
+h9 {
+  padding: 50px 0px;
+  font-size: 3vw;
+
+  color: #cdc3a4;
+}
+
+.prior-autm {
+  padding: 30px;
+  font-size: 2vw;
+  color: #cdc3a4;
+}
+
+/*article gold*/
 .grid-two {
   grid-column: 4 / 9;
   border-style: solid;
 }
 
+.article-two {
+  padding-top: 20px;
+  max-width: 80%;
+  max-height: 100%;
+}
+
+h2 {
+  padding-top: 40px;
+  font-size: 5vw;
+  padding-bottom: 20px;
+}
+
+p#gold {
+  padding-bottom: 50px;
+  font-size: 3vw;
+  font-family: 'Playfair Display SC', serif;
+  font-family: 'Roboto', sans-serif;
+  color: #897537;
+  text-decoration: underline;
+}
+
+/*autumn recipes*/
 .grid-four {
   grid-column: 1 / 3;
   border: solid;
 }
 
-p4 {
+h4 {
   padding-top: 20px;
   padding-bottom: 20px;
   font-size: 3vw;
-  font-family: 'Playfair Display';
   color: #5a4041;
 }
 
-p44 {
+p#pumpkrec {
   padding-top: 5px;
   padding-bottom: 20px;
   font-size: 1.7vw;
-  font-family: 'Playfair Display';
+  font-family: 'Playfair Display SC', serif;
+  font-family: 'Roboto', sans-serif;
   color: #5a4041;
 }
 
+/*autmn recipes pics*/
 .grid-five {
   grid-column: 3 / 5;
-}
-
-.article-pumpk {
-  padding-top: 15px;
-  max-width: 99%;
-  max-height: 99%;
 }
 
 .grid-six {
@@ -284,6 +282,13 @@ p44 {
   grid-column: 7 / 9;
 }
 
+.article-pumpk {
+  padding-top: 15px;
+  max-width: 99%;
+  max-height: 99%;
+}
+
+/*article decades beauty*/
 .grid-eight {
   grid-column: span 8;
 }
@@ -293,15 +298,16 @@ h8 {
   font-size: 5vw;
 }
 
-p8 {
+p#beauty {
   padding: 7px;
   font-size: 2vw;
   color: #cdc3a4;
+  font-family: 'Roboto', sans-serif;
 }
 
-p7 {
+p#imgb {
   padding: 15px;
-  font-size: 1vw;
+  font-size: 0.9vw;
   color: #5a4041;
 }
 
@@ -323,5 +329,7 @@ p7 {
   .grid-item {
     width: 100%;
     margin-bottom: 20px;
+  }
+}
 
-    /*GRID STOPS HERE*/
+/*GRID STOPS HERE*/
