--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ html {background-color: pink;
   }
   .grid-parent,
   .grid-parent1 {
-    grid-template-columns: repeat(2, 1fr); /* Two columns for tablet */
+    grid-template-columns: repeat(2, 1fr); 
     gap: 10px;
   }
   .grid-item {
@@ -161,7 +161,7 @@ html {background-color: pink;
   }
   .grid-parent,
   .grid-parent1 {
-    grid-template-columns: repeat(4, 1fr); /* Four columns for desktop */
+    grid-template-columns: repeat(4, 1fr); 
     gap: 10px;
   }
   .grid-item {
