--- a/code/style.css
+++ b/code/style.css
@@ -10,7 +10,8 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-  margin: 0.5rem
+  margin: 0.5rem; 
+  background-color: red;
 }
 
 .navbar img {
