--- a/code/style.css
+++ b/code/style.css
@@ -11,7 +11,6 @@ body {
   align-items: center;
   padding: 0 20px;
   margin: 0.5rem; 
-  background-color: red;
 }
 
 .navbar img {
@@ -133,8 +132,9 @@ a {
   }
 
   .nav-menu {
-    display: flex;
+    display: none;
     justify-content: space-between;
+    gap: 20px; 
   }
 
   .navbar img {
@@ -152,7 +152,8 @@ a {
   }
 
   .hamburger {
-    display: none;
+    display: block;
+    cursor: pointer; 
   }
 
   .main-news {
@@ -181,7 +182,8 @@ a {
 
   .main-news img {
     height: 20rem;
-    width: 50%
+    width: 50%; 
+    object-fit: cover;
   }
 
   .main-news h1 {
@@ -206,7 +208,8 @@ a {
     margin-top: -10px;
     display: block;
     width: 83%;
-    font-size: 1rem
+    font-size: 0.8rem;
+    height: 35%; 
   }
 
   .box-text p {
@@ -276,7 +279,8 @@ a {
 
   .main-news img {
     height: 25rem;
-    width: 50%
+    width: 50%; 
+    object-fit: cover;
   }
 
   .main-news h1 {
@@ -304,7 +308,8 @@ a {
   .box-text {
     display: block;
     width: 83%;
-    font-size: 0.7rem
+    font-size: 0.6rem;
+    height: 35%; 
   }
 
   .box-text p {
