-m changed the grid colum on the mobile

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ html {background-color: pink;
   .grid-parent,
   .grid-parent1 {
     display: grid;
-    grid-template-columns: repeat (1, 1fr); 
+    grid-template-columns: 1fr; 
     gap: 10px;
   }
   
