--- a/code/style.css
+++ b/code/style.css
@@ -158,7 +158,7 @@ a:hover {
   padding: 5px;
 }
 
-.burger-menu {
+.dropdown {
   display: none;
 }
 
@@ -179,11 +179,6 @@ a:hover {
 
   .flex-navbar {
     display: none;
-  }
-
-  .burger-menu {
-    display: flex;
-    justify-content: center;
   }
 
   .dropbtn {
