--- a/code/style.css
+++ b/code/style.css
@@ -28,6 +28,11 @@ header {
   justify-content: space-between;
   padding: 1em;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 header button {
@@ -48,17 +53,20 @@ header div {
   font-family: "Courier New";
   font-weight: 400;
   font-size: 25px;
+
+  flex-direction: column;
+  text-decoration: none;
 }
 
 nav a {
-  text-decoration: none;
   color: #0d5758;
   font-weight: bold;
-  padding: 24px;
+  padding: 2px;
+  font-size: 18px;
 }
 
 .header img {
-  width: 100px;
+  width: 50px;
 }
 
 /*header end*/
@@ -68,6 +76,8 @@ h1 {
   font-family: "Courier New";
   font-weight: 200;
   font-size: 40px;
+  margin-bottom: 20px;
+  margin-top: 63px;
 }
 
 p {
@@ -80,7 +90,7 @@ p {
 div p {
   color: #0d5758;
   font-size: 70px;
-  margin-top: 15px;
+
   margin-bottom: 15px;
   font-weight: 300;
   letter-spacing: 16px;
@@ -95,6 +105,7 @@ div p {
 .hero .small-p {
   font-size: 1.5em;
   letter-spacing: 0px;
+  margin-top: 20px;
 }
 
 /* End Hero CSS */
@@ -107,12 +118,12 @@ div p {
   padding: 20px;
   flex-direction: column;
   justify-content: center;
-  margin: 20px;
+  align-items: center;
 }
 
 .flex-img img {
-  max-width: 100%;
-  height: 100%;
+  width: 80%;
+
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -120,7 +131,6 @@ div p {
 
 .flex-child-red {
   margin: 20px;
-  width: 100%;
 }
 
 .flex-child-redtwo {
@@ -218,6 +228,45 @@ div p {
 }
 
 /*small articles end*/
+
+@media screen and (min-width: 768px) {
+  /* Change the layout to 2 columns for tablets */
+  .articles {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .flex-parent {
+    width: 70%;
+
+    display: flex;
+
+    border: 2px solid #0d5758;
+    padding: 4px;
+    flex-direction: row;
+    justify-content: center;
+    margin: auto;
+  }
+  .flex-img img {
+    width: 290px;
+  }
+  .nav {
+    flex-direction: row;
+    gap: 30px;
+  }
+  .header img {
+    width: 100px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  /* Change the layout to 4 columns for desktops */
+  .articles {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .flex-img img {
+    width: 500px;
+  }
+}
 
 /* media queries - for tablet*/
 /* @media screen and (min-width: 768px) {
