--- a/code/style.css
+++ b/code/style.css
@@ -77,7 +77,7 @@ h1 {
   font-weight: 200;
   font-size: 40px;
   margin-bottom: 20px;
-  margin-top: 63px;
+  margin-top: 117px;
 }
 
 p {
@@ -225,6 +225,10 @@ div p {
 
 .article-9:hover {
   transform: scale(1.1);
+}
+
+.footer {
+  padding-top: 30px;
 }
 
 /*small articles end*/
