--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=New+Rocker&family=Nunito&family=Saira+Extra+Condensed:wght@100;400&family=Shizuru&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&family=New+Rocker&display=swap');
+
+
+
 
 body {
 
@@ -24,18 +27,37 @@ header {
 
 h1 {
     font-family: "New Rocker";
+    color: #961DF6;
     font-size: 30px;
     margin: 0;
 }
 
 
+.big-news {
+    font-family: "Montserrat";
 
+
+}
 
 .small-news {
-
+    font-family: "Montserrat";
     display: grid;
     grid-template-columns: max-content max-content;
     display: flex;
     column-gap: 30px;
     align-items: center;
+}
+
+.small-news p {font-weight: 100;
+
+}
+
+.small-news:nth-child(odd) img {
+    
+    border: 5px solid #41d62d;
+}
+
+.small-news:nth-child(even) img {
+    
+    border: 5px solid #f2971f;
 }
