--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&family=New+Rocker&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500&display=swap');
@@ -24,6 +22,26 @@ header {
     width: 70px;
 }
 
+.links ol {
+
+
+    margin:0;
+    padding: 0;
+    text-indent: 0;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    column-gap: 20px;
+    font-family: Comfortaa;
+    font-weight: 500;
+    
+}
+
+.links a {
+    text-decoration: none;
+    color: #e2a5f1;
+}
+
 .intro {
     position: relative;
 
@@ -34,6 +52,8 @@ header {
    
 }
 
+
+
 .intro-text {
 
     background-color: #a0ecf6a5;
@@ -43,6 +63,23 @@ header {
     bottom: 0;
     right: 0;
 }
+.intro-text h2 {
+
+  
+    font-family: "Comfortaa";
+    font-weight: "500";
+    font-size: 18px;
+}
+  
+    
+.intro-text p {
+
+    font-family: "Comfortaa";
+    font-weight: "300";
+    font-size: 13px;
+}
+
+
 
 h1 {
     font-family: "Nerko One";
@@ -69,8 +106,8 @@ h1 {
     
 }
 
-.small-news h4 {
-    font-size: 22px;
+.small-news h2 {
+    font-size: 18px;
 }
 
 .small-news p {font-weight: 300;
